--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>org.dbdesktop</groupId>
     <artifactId>desktop-generator</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>dbstructure</module>
+        <module>generator</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -45,9 +50,16 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>24.1.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.13</version> <!-- or latest -->
+        </dependency>
+
     </dependencies>
 
 </project>
