--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.13</version> <!-- or latest -->
         </dependency>
+        <dependency>
+            <groupId>org.dbdesktop</groupId>
+            <artifactId>dbstructure</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
